# django-template

./: README.md  pyproject.toml
apps/Customer/: models.py  serializers.py  views.py
apps/sample/: pyvenv.cfg
config/: settings.py  urls.py
